recursion.cons.min.Min.scala.error
Compilation error:
Min:2: error: an expression of type Null is ineligible for implicit conversion
var record: Int = null
                  ^Min:2: error: type mismatch;
 found   : Null(null)
 required: Int
var record: Int = null
                  ^